# challenges

./: .editorconfig  .gitignore  .markdownlint.json  README.md  default_readme.md  package-lock.json  package.json
Challenge1/: challenge1.md
Challenge1/trotter/: README.md  input.txt  m-input.txt  stack.yaml  switches.cabal
Challenge2/: Challenge2.md  Sacks
Challenge2/images/: Dice.sketch
Challenge2/trotter/: .gitignore  bower.json  main.js  webpack.config.js  webpack.production.config.js
Chuck/: README.md
Chuck/zac/: README.md  run.sh
ColorPuzzle/: README.md
Euler 14/: README.md  Sacks
Euler 14/barlow/: README.md
Euler 14/timg/: README.md
Euler14/: README.md
Euler14/Sacks/: README.md
Euler14/gordon/: README.md
Euler14/timg/: README.md
MaximumPath1/: README.md
MaximumPath1/JeremyLund/: index.js  large-triangle.txt
MaximumPath1/carlos/: readme
NameScore/: README.md
ScrabbleChallenge/: README.md
adding-calculator/: README.md
bookshelf-problem/: ReadMe.md
closest-string/: readme.md  sethp-draft1.R
evolve-hello-world/: README.md
home-row-spell-check/: README.md  enable1.txt
how-long-has-the-light-been-on/: README.md
pancake-flipping/: README.md
periodic-table-words/: README.md
periodic-table-words/trotter/: LICENSE  README.md  periodic-table-words.cabal  results.txt
periodic-table-words/trotter/data/: periodic-table.csv
periodic-table-words/trotter/src/: Main.hs
red-squiggles/: README.md  SethP_squigglies.R
sales-commissions/: README.md
tally-program/: README.md
word-funnel/: README.md
(+142 files in other folders)
