name:                periodic-table-words
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spicydonuts/periodic-table-words#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Trotter
maintainer:          spicydonuts@gmail.com
copyright:           2017 Michael Trotter
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable periodic-table-words
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cassava
                     , generic-deriving
                     , text
                     , vector
                     , vector-algorithms
